@@ -1,3 +1,6 @@
+5 August 2010: Wouter
+	- Return NXDOMAIN after chain of CNAMEs ends at name-not-found.
+
 4 August 2010: Wouter
 	- Fix validation in case a trust anchor enters into a zone with
 	  unsupported algorithms.
